Update author infomation

--- a/index.html
+++ b/index.html
@@ -41,26 +41,59 @@
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="index.html">Zheng Gu</a><sup>1,2</sup>,</span>
+              <a href="https://edward3862.github.io/">Zheng Gu</a><sup>1,2</sup>,</span>
             <span class="author-block">
-              <a href="index.html">Shiyuan Yang</a><sup>2,3</sup>,</span>
+              <a href="">Shiyuan Yang</a><sup>1,3</sup>,</span>
             <span class="author-block">
-              <a href="index.html">Jing Liao</a><sup>2</sup>,
+              <a href="https://www.cityu.edu.hk/stfprofile/jingliao.htm">Jing Liao</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="index.html">Jing Huo</a><sup>1</sup>,
+              <a href="https://cs.nju.edu.cn/huojing/index.htm">Jing Huo</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="index.html">Yang Gao</a><sup>1</sup>
+              <a href="https://cs.nju.edu.cn/gaoyang/index.htm">Yang Gao</a><sup>2</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Nanjing University,</span>
-            <span class="author-block"><sup>2</sup>City University of Hong Kong,</span>
+            <span class="author-block"><sup>1</sup>City University of Hong Kong,</span><br>
+            <span class="author-block"><sup>2</sup>State Key Lab for Novel Software Technology, Nanjing University,</span><br>
             <span class="author-block"><sup>3</sup>Tianjin University</span>
           </div>
 
+          <div class="column has-text-centered">
+            <div class="publication-links">
+              <!-- PDF Link. todo-->
+              <span class="link-block">
+                <a href=""
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Paper</span>
+                </a>
+              </span>
+              <!-- Code Link. -->
+              <span class="link-block">
+                <a href="https://github.com/edward3862/Analogist"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
+                  </a>
+              </span>
+              <!-- Video Link. todo-->
+              <span class="link-block">
+                <a href=""
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-youtube"></i>
+                  </span>
+                  <span>Video</span>
+                </a>
+              </span>
+            </div>
         </div>
       </div>
     </div>
@@ -130,8 +163,7 @@
       </div>
       <!--/ Method. -->
       
-      <div class="columns is-centered">
-        <!-- Self-Attention Cloning (SAC). -->
+      <!-- <div class="columns is-centered">
         <div class="column">
           <div class="content">
             <h3 class="title is-4">Self-Attention Cloning (SAC)</h3>
@@ -141,9 +173,7 @@
             </p>
           </div>
         </div>
-        <!--/ Self-Attention Cloning (SAC). -->
 
-        <!-- Cross-Attention Masking (CAM). -->
         <div class="column">
           <div class="content">
             <h3 class="title is-4">Cross-Attention Masking (CAM)</h3>
@@ -153,8 +183,7 @@
             </p>
           </div>
         </div>
-        <!--/ Cross-Attention Masking (CAM). -->
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
@@ -381,18 +410,6 @@
             <div class="item" style="margin: 0px; overflow: auto; border:0px; text-align: center;">
               <img src="./static/images/results/ubcfashion_003.jpg"/>
             </div>
-            <div class="item" style="margin: 0px; overflow: auto; border:0px; text-align: center;">
-              <img src="./static/images/results/colorization_004.jpg"/>
-            </div>
-            <div class="item" style="margin: 0px; overflow: auto; border:0px; text-align: center;">
-              <img src="./static/images/results/colorization_005.jpg"/>
-            </div>
-            <div class="item" style="margin: 0px; overflow: auto; border:0px; text-align: center;">
-              <img src="./static/images/results/colorization_006.jpg"/>
-            </div>
-            <div class="item" style="margin: 0px; overflow: auto; border:0px; text-align: center;">
-              <img src="./static/images/results/colorization_007.jpg"/>
-            </div>
           </div>
         </div>
       </div>
@@ -453,7 +470,7 @@
         <img src="./static/images/application_aligned.jpg"/>
       </div>
       <div class="column is-full-width">
-        <h3 class="title is-4">\(A\) and \(A'\) are not aligned</h3>
+        <h3 class="title is-4">\(A\) and \(B\) are aligned</h3>
         <img src="./static/images/application_unaligned.jpg"/>
       </div>
       
