--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
       <!--/ Method. -->
       
-      <!-- <div class="columns is-centered">
+      <div class="columns is-centered">
         <div class="column">
           <div class="content">
             <h3 class="title is-4">Self-Attention Cloning (SAC)</h3>
@@ -183,7 +183,7 @@
             </p>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
 </section>
