--- a/index.html
+++ b/index.html
@@ -490,6 +490,18 @@
 </section>
 
 
+<section class="section" id="BibTeX">
+  <div class="container is-max-desktop content">
+    <h2 class="title">BibTeX</h2>
+    <pre><code>@article{gu2024analogist,
+      title     = {Analogist: Out-of-the-box Visual In-Context Learning with Image Diffusion Model},
+      author    = {GU, Zheng and Yang, Shiyuan and Liao, Jing and Huo, Jing and Gao, Yang},
+      journal   = {ACM Transactions on Graphics (TOG)},
+      year      = {2024},
+}</code></pre>
+  </div>
+</section>
+
 
 <footer class="footer">
   <div class="container">
