--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://edward3862.github.io/">Zheng Gu</a><sup>1,2</sup>,</span>
+              <a href="https://github.com/edward3862">Zheng Gu</a><sup>1,2</sup>,</span>
             <span class="author-block">
-              <a href="">Shiyuan Yang</a><sup>1,3</sup>,</span>
+              <a href="https://github.com/ysy31415">Shiyuan Yang</a><sup>1,3</sup>,</span>
             <span class="author-block">
               <a href="https://www.cityu.edu.hk/stfprofile/jingliao.htm">Jing Liao</a><sup>1</sup>,
             </span>
