--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
           <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- PDF Link. todo-->
+              <!-- PDF Link.-->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2405.10316"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
